// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualityFilter (Redux-connected) uses store properties as <Slider> value 1`] = `
Object {
  "0": "0",
  "100": "100",
  "20": <React.Fragment />,
  "30": <React.Fragment />,
  "40": <React.Fragment />,
}
`;

exports[`QualityFilter renders its components 1`] = `
<Slider
  defaultValue={
    Array [
      10,
      90,
    ]
  }
  marks={
    Object {
      "0": "0",
      "100": "100",
      "20": <React.Fragment />,
      "30": <React.Fragment />,
      "40": <React.Fragment />,
    }
  }
  max={100}
  min={0}
  onChange={[Function]}
  range={true}
  tipFormatter={[Function]}
/>
`;
